[gd_scene load_steps=6 format=2]

[ext_resource path="res://Furniture/Assets/crib_bars.png" type="Texture" id=1]
[ext_resource path="res://Furniture/Assets/crib_base.png" type="Texture" id=2]
[ext_resource path="res://Interactions/Crib.gd" type="Script" id=4]
[ext_resource path="res://SFX/lullaby.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.83377
height = 17.309

[node name="crib" type="StaticBody2D" groups=[
"container",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="crib_base" type="Sprite" parent="."]
position = Vector2( 0.294964, -9.7927 )
texture = ExtResource( 2 )

[node name="ItemPosition" type="Position2D" parent="."]
position = Vector2( -1.54513, -2.7625 )

[node name="crib_bars" type="Sprite" parent="."]
position = Vector2( 0.294964, -9.7927 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.199451, -1.7687 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="EffectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
[connection signal="finished" from="EffectAudio" to="." method="_on_EffectAudio_finished"]
